# vcpkg_cmake

./: .gitignore  .pkgx.yaml  CMakeLists.txt  CMakePresets.json  package.json  vcpkg.json  vcpkg_cmake.code-workspace
public/: index.html  test.txt
src/: macros.hpp  main.cpp  main.hpp
